# document-processing-gateway

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  TESTING_GUIDE.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: b540925a84ae_create_jobs_table.py
app/: main.py
app/api/v1/: jobs.py  schemas.py
app/consumer/: event_consumer.py
app/core/: config.py  events.py  orchestrator.py  state_machine.py
app/db/: engine.py
app/grpc/: gateway.proto  server.py  servicer.py
app/models/: job.py
app/providers/: analysis.py  base.py  enrichment.py  extraction.py
app/services/: job_service.py
docs/: ideas-quickdrop.md  roadmap.md  task.md
scripts/: gen_proto.sh  smoke_test.sh
tests/: conftest.py
tests/integration/: conftest.py  test_full_flow.py
tests/unit/: test_job_service.py  test_orchestrator.py  test_providers.py  test_state_machine.py
