[project]
name = "document-processing-gateway"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic-settings>=2.0.0",
    "redis>=5.0.0",
    "tenacity>=8.2.0",
    "grpcio>=1.64.0",
    "grpcio-tools>=1.64.0",
    "protobuf>=5.27.0,<6",
    "grpcio-reflection>=1.71.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "coverage>=7.0.0",
    "ruff>=0.4.0",
]
mypy = [
    "mypy>=1.10.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["app/grpc/generated"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["integration: requires running postgres and redis (docker-compose)"]

[tool.mypy]
plugins = ["pydantic.mypy"]
exclude = ["app/grpc"]

[[tool.mypy.overrides]]
module = ["grpc", "grpc.*", "grpc_reflection.*", "google.protobuf", "google.protobuf.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["app.grpc", "app.grpc.*"]
follow_imports = "skip"

[tool.coverage.run]
source = ["app"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
